# gods_kb

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.md  app_utils.py  bom.txt  ctlr.py  designer.py  disease.py  ds.py  execution_cfg.py  go_term.py  keyword_handler.py  liver_drug_metabolism_graph_filtered_tissue_hierarchy_map.json  main.py  openai.py  organs.py  protein.py  pyproject.toml  query_pipe.py  r.txt  requirements.txt  server.py  session_artifacts.py  setup.ps1  shop.py  string_db.py  test.py  tissue.py  todos.py  uberon.py  uniprot_kb.py  validation_report.json  visual.py  wf.py
.claude/: settings.local.json
_db/: manager.py
brain_neurotransmission_design_artifacts/: design_DISEASE.json  design_ORGAN.json  design_TISSUE.json  design_TISSUE_2D_LAYER.json  design_manifest.json
cardiac_ion_channels_design_artifacts/: design_DISEASE.json  design_ORGAN.json  design_TISSUE.json  design_TISSUE_2D_LAYER.json  design_manifest.json
cell/: cells.py
data/: __init__.py  _bridge_reactome_nodes.py  _enrich_go_term_metadata.py  _ingest_organ_layer.py  _pug_rest_compound_fetch.py  _wire_gene_go_edges.py  _wire_go_hierarchy.py  build_tissue_hierarchy_map.py  compute_electron_density_matrices.py  compute_sequence_hashes.py  crosslink_allergen_food_sources.py  description_xref_wiring.py  detect_allergen_proteins.py  enrich_allergen_molecular_impact.py  enrich_bioelectric_disease_signal_pipeline.py  enrich_bioelectric_properties.py  enrich_cell_type_expression.py  enrich_cellular_components.py  enrich_compartment_localization.py  enrich_ctd_organ_associations.py  (+32 more)
(+26 files in other folders)
